--- a/sitedu/css/estilo.css
+++ b/sitedu/css/estilo.css
@@ -79,7 +79,7 @@ header{
     background-size:cover;
     background-position: center; 
     background-repeat: no-repeat;
-    color:#81A7CC;
+    color:#b2c1d1;
     display: flex;
     flex-direction:column;
     align-items: center;
@@ -137,6 +137,180 @@ header{
 	width: 50%;
  }
 
+
+
+
+ #especialidades {
+ 		padding: 20px;
+ 		display: flex;
+ 		flex-direction: column;
+ 		align-items: center;
+ 		position: relative;
+ 		margin: 0 auto;
+ }
+
+
+ #especialidades div{
+        display: flex;
+ 		flex-direction: column;
+ 		align-items: center;
+ 		text-align: center;
+ 		margin-top:30px;
+
+ }
+
+
+ #especialidades p{
+ 		line-height: 1.5;
+ 		margin: 2vh;
+ 		font-size: 1.2em;
+ }
+
+ #especialidades img{
+ 	margin:10px 0;
+ }
+
+ #especialidades h2{
+ 	font-size:2em;
+ }
+
+
+ #especialidades{
+ 	flex-direction: row;
+ 	flex-wrap: wrap;
+ 	align-items: flex-start;
+ 	max-width: 1000px;
+ 	margin: 0 auto;
+ }
+ #especialidades h2{
+ 	text-align:center;
+ 	width: 100%;
+ }
+ #especialidades div{
+ 	flex-grow: 1;
+ 	flex-basis: 150px;
+ 	padding: 0 10px;
+ }
+
+ #competencias{
+ 	display: flex;
+ 	flex-direction: column;
+ 	align-items: center;
+ 	padding-top: 20px;
+ 	margin-right: 20px;
+ 	margin-left: 20px
+
+ }
+ #competencias h2{
+	margin-bottom: 20px;
+	margin-top: 20px;
+	font-size: 2em;
+	text-align: center;
+}
+ #competencias h3, p{
+	margin-bottom: 20px;
+	margin-top: 20px;
+	font-size: 1em;
+	text-align: center;
+}
+
+ #competencias a {
+ 	text-decoration: none;
+ }
+ #competencias img {
+	width: 100%;
+ 	margin-bottom: 0;
+}
+ #competencias .comp p {
+  border-left: 2px solid black;
+  border-right: 2px solid black;
+  border-bottom: 2px solid black;
+  margin-top: 0;
+  font-family:'Josefin Sans', sans-serif; }
+
+
+-
+ /* #hobby {
+  	display: flex;
+ 	flex-direction: column;
+ 	align-items: center;
+ 	padding-top: 20px;
+ 	margin-right: 20px;
+ 	margin-left: 20px;
+ 	width: 100%;
+
+  }
+
+
+  #hobby h2{
+  	margin-bottom: 20px;
+	margin-top: 10px;
+	font-size: 2em;
+	text-align: center;
+}
+ .hobby|{
+ 	width: 80%;
+ 	align-items: center;
+ 	text-align: center;
+
+
+ }
+ .hobby h2{
+ 	font-size: 1.5em;
+ 	margin-top: 30px;
+ 	margin-bottom: 14px;
+ }
+*/
+  
+ #contato {
+	display: flex;
+	flex-direction: column;
+	text-align:center;
+	align-items: center;
+	background-color: #708090;
+	width:100%;
+}
+ #contato h2{
+	margin-left: 20px;
+	margin-width: 20px;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	font-size: 2em;
+	text-align: center;
+	color: #708090;
+
+}
+
+ #contato  p{
+	margin-bottom: 20px;
+	font-size: 1.2em;
+	color:#708090;
+	text-align: center;
+}
+ #contato a{
+	text-decoration: none;
+	color: #708090;
+	font-family: 'Josefin Sans', sans-serif;
+	text-align: center;
+
+}
+footer{
+	text-align: center;
+	width: 100%;
+	background-color: #508090;
+	padding-top: 20px;
+	padding-top:20px;
+}
+   
+
+
+
+
+
+
+ 
+
+
  @media screen and (min-width:768px){
 
  /*Cabeçalho ou barra de navegação*/
@@ -188,7 +362,39 @@ header{
  	flex-basis: 300px;
  	padding:0 10px;
  }
+
+
+ #competencias {
+ 	flex-direction: row;
+ 	flex-wrap: wrap;
+
  }
+ #competencias h2,h3 {
+ 	width: 100%;
+ 	text-align: center;
+ }
+ #competencias .comp{
+ 	width:33.3333333333%;
+ 	text-align:center;
+ }
+ #contato {
+ 	flex-direction: row;
+ 	flex-wrap: wrap;
+    justify-content: space-around;
+    max-width: 100%;
+    margin: 0 auto;
+    text-align: center;
+    max-height: 40%;
+    width: 100%;
+
+
+ }
+ #contato h2,
+ #contato p{
+ 	width: 100%;
+ 	text-align: center;
+ }
+
   
 
 
